After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699009 - C++11 requires a space between literal and GST_VIDEO_SIZE_RANGE identifier
C++11 requires a space between literal and GST_VIDEO_SIZE_RANGE identifier
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Mac OS
: Normal normal
: 0.10.37
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 701362 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-04-27 02:33 UTC by async.processingjs
Modified: 2013-05-31 22:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description async.processingjs 2013-04-27 02:33:49 UTC
Getting an error when an application compiled with clang-3.1:

...include/gstreamer-0.10/gst/video/video.h:357:17: error: 
      invalid suffix on literal; C++11 requires a space between literal and
      identifier [-Wreserved-user-defined-literal]
      "width = "GST_VIDEO_SIZE_RANGE" , "                               \
                ^

Inserting extra spaces before/after GST_VIDEO_SIZE_RANGE fixes the issue:

      "width = " GST_VIDEO_SIZE_RANGE " , "                               \
Comment 1 Tim-Philipp Müller 2013-04-27 08:28:02 UTC
GStreamer 0.10 is no longer maintained, applications should be ported to 1.x.

However, I've pushed a fix for this, since it's rather trivial:

 commit bdb33163478fdf95938fbdca7eabad3ea920a277
 Author: Tim-Philipp Müller <tim@centricular.net>
 Date:   Sat Apr 27 09:25:35 2013 +0100

    video: fix compiler warning in header with C++11 / clang-3.1
    
    ...include/gstreamer-0.10/gst/video/video.h:357:17: error:
          invalid suffix on literal; C++11 requires a space between literal and
          identifier [-Wreserved-user-defined-literal]
          "width = "GST_VIDEO_SIZE_RANGE" , "                               \
    
    https://bugzilla.gnome.org/show_bug.cgi?id=699009

Seems to be already fixed in the 1.x headers (though there may be other problems of course).
Comment 2 Tim-Philipp Müller 2013-05-31 22:10:15 UTC
*** Bug 701362 has been marked as a duplicate of this bug. ***