video: fix compiler warning in header with C++11 / clang-3.1

...include/gstreamer-0.10/gst/video/video.h:357:17: error:
      invalid suffix on literal; C++11 requires a space between literal and
      identifier [-Wreserved-user-defined-literal]
      "width = "GST_VIDEO_SIZE_RANGE" , "                               \

https://bugzilla.gnome.org/show_bug.cgi?id=699009